--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
         </div>
       </div>
     </div>
+    <p> <a href="https://github.com/Chocsy/WeatherApp_Nonah" target="_blank"> Open-source code </a> </p> by Nonah Supat</p>
   </body>
   <script src="src/script.js"></script>
 </html>
