Updated footer and corresponding styling

--- a/index.html
+++ b/index.html
@@ -155,7 +155,12 @@
         </div>
       </div>
     </div>
-    <p> <a href="https://github.com/Chocsy/WeatherApp_Nonah" target="_blank"> Open-source code </a> </p> by Nonah Supat</p>
+    <footer>
+      <a href="https://github.com/Chocsy/WeatherApp_Nonah" target="_blank">
+        Open-source code
+      </a>
+      by Nonah Supat
+    </footer>
   </body>
   <script src="src/script.js"></script>
 </html>
