Updated description to Capitalize

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </div>
           <div class="row">
             <div class="col">
-              <h1 id="currentTemp">°C</h1>
+              <h1 id="currentTemp">20°C</h1>
             </div>
             <div class="col">
               <ul class="rain-wind">
@@ -154,13 +154,17 @@
           </div>
         </div>
       </div>
+      <footer>
+        <a
+          href="https://github.com/Chocsy/WeatherApp_Nonah"
+          target="_blank"
+          class="footer"
+        >
+          Open-source code
+        </a>
+        by Nonah Supat
+      </footer>
     </div>
-    <footer>
-      <a href="https://github.com/Chocsy/WeatherApp_Nonah" target="_blank">
-        Open-source code
-      </a>
-      by Nonah Supat
-    </footer>
   </body>
   <script src="src/script.js"></script>
 </html>
