Added relevant weather icon and alternative text from API

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           </div>
           <div class="description" id="description"></div>
           <div class="main-weather-icon">
-            <img src="src/img/cloudy.png" alt="cloudy" width="200px" />
+            <img src="" id="icon" alt="cloudy" width="200px" />
             <br />
           </div>
           <br />
