--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
           <div class="row">
             <div class="col">
               <div class="clearfix">
-                <h1> <span id="currentTemp">20</h1></span><span class="units"></span></h1>
+                <h1>
+                  <span id="currentTemp">20</span><span class="units"></span>
+                </h1>
               </div>
             </div>
             <div class="col">
