--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   type="text"
                   placeholder="Search a city..."
                   id="citySearch"
-                  class="form-control"
+                  class="form-control p-1"
                   autocomplete="off"
                   autofocus="on"
                 />
