Removed Celcius and Farenheit Selection as well as the time. Only to return day.

--- a/index.html
+++ b/index.html
@@ -42,38 +42,11 @@
               </div>
             </div>
           </form>
-          <div
-            class="btn-toolbar Celcius-Farenheit"
-            role="toolbar"
-            aria-label="Toolbar with button groups"
-          >
-            <div
-              class="btn-group me-2"
-              role="group"
-              aria-label="First group"
-              id="temperature-scale"
-            >
-              <button
-                type="button"
-                class="btn btn-primary btn-sm unit-button-celcius"
-                id="celcius-btn"
-              >
-                <small>°C</small>
-              </button>
-              <button
-                type="button"
-                class="btn btn-primary btn-sm unit-button-farenheit"
-                id="farenheit-btn"
-              >
-                <small>°F</small>
-              </button>
-            </div>
-          </div>
           <div class="row">
             <div class="col">
               <div class="clearfix">
                 <h1>
-                  <span id="currentTemp">20</span><span class="units">°</span>
+                  <span id="currentTemp">20</span><span class="units">°C</span>
                 </h1>
               </div>
             </div>
